<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layuoutSecond"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".view.DetailActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="250dp"
        android:layout_height="25dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/nyt1" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/buscar"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <ImageButton
        android:id="@+id/imageButSecond"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginLeft="10dp"
        android:background="#FFFFFF"
        android:backgroundTint="#FBF9F9"
        android:contentDescription="@string/buscar"
        android:scaleType="centerCrop"
        android:tintMode="multiply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textInputSecond"
        app:layout_constraintTop_toTopOf="@+id/textInputSecond"
        app:srcCompat="?android:attr/actionModeWebSearchDrawable"
        app:tint="#0B0A0A"
        tools:ignore="TouchTargetSizeCheck" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputSecond"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:startIconDrawable="?android:attr/actionModeWebSearchDrawable">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="345dp"
            android:layout_height="40dp"
            android:layout_marginTop="2dp"
            android:backgroundTint="#FFFFFF"
            android:hint="Text to Search"
            tools:ignore="TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/secondStTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/status"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputSecond" />

    <TextView
        android:id="@+id/secondStatusTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/secondStTxt"
        app:layout_constraintTop_toTopOf="@+id/secondStTxt" />

    <TextView
        android:id="@+id/secondResTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/results"
        app:layout_constraintStart_toStartOf="@+id/secondStTxt"
        app:layout_constraintTop_toBottomOf="@+id/secondStTxt" />

    <TextView
        android:id="@+id/secondResultTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/secondResTxt"
        app:layout_constraintTop_toBottomOf="@+id/secondStTxt" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewSecond"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/secondResTxt" />
</androidx.constraintlayout.widget.ConstraintLayout>